# veruska

./: .drone.yml  .gitignore  Dockerfile  Dockerfile.local  LICENSE  docker-compose.yml  pyproject.toml
tests/: test_veruska.py
veruska/: client.py  constants.py  main.py  voice.py
