[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "veruska"
version = "0.1.0"
description = ""
authors = [ "Aria Taylor <ari@aricodes.net>",]

[tool.black]
line-length = 95
target-version = [ "py39",]

[tool.poetry.dependencies]
python = "^3.9"
py-cord = {extras = ["voice"], version = "^1.7.3"}
python-environ = "^0.4.54"
use-dir = "^0.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
watchgod = "^0.7"

[tool.poetry.scripts]
veruska = "veruska.main:main"
